--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2527,13 +2527,13 @@
         <phrase id="fldcaption" value="Medicine Name" />
       </field>
       <field id="quantity">
-        <phrase id="fldcaption" value="Qty Issues" />
+        <phrase id="fldcaption" value="Quantity" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Issue Date" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="medicine_stock_data">
